# os_lab1

./: .clang-tidy  CMakeLists.txt  README.md  bench1.cpp  bench2.cpp  example.txt  multi_bench.cpp  shell.cpp
.github/workflows/: ci.yml
include/: bench1.hpp  bench2.hpp  cd_shell.hpp  multi_bench.hpp  shell.hpp
src/: main.cpp
src/benchmark/: bench1.cpp  bench2.cpp  collatz_conjecture.cpp  multi_bench.cpp
src/shell/: cd_shell.cpp  shell.cpp
src/tests/: test_bench1.cpp  test_bench2.cpp  test_main.cpp  test_multi_bench.cpp  test_shell.cpp
src/tests/data/: text.txt
